--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-view-slider": "^1.1.1",
     "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.1.7",
     "react-native-xml2js": "^1.0.3",
     "react-navigation": "^4.4.3"
   },
